[feat] #1 configmap.yaml 수정해서 드디어 password authentication successful. // Failed to create pod, giving up (Failed to wait for pod to come up. (timed out waiting for the condition)
Former-commit-id: 5b61f77fe6faa5ee0207333c3be78299466a0a89

--- a/containerssh/templates/configmap.yaml
+++ b/containerssh/templates/configmap.yaml
@@ -18,9 +18,11 @@ data:
 
     auth:
       password:
+        method: webhook
         webhook:
           url: "{{ .Values.config.authPasswordUrl }}"
       publicKey:
+        method: webhook
         webhook:
           url: "{{ .Values.config.authPubkeyUrl }}"
       timeout: {{ .Values.config.authTimeout }}
