pv, pvc 만들기 추가 https://www.notion.so/231c7692a26380c892cbddd9ae5a6c19?source=copy_link
Former-commit-id: 1cd08dc1b7d8519179d06f9377e2d1537ba1e887

--- a/containerssh/values.yaml
+++ b/containerssh/values.yaml
@@ -1,4 +1,4 @@
-username: guest
+username: jy
 
 image:
   repository: containerssh/containerssh
@@ -6,7 +6,7 @@ image:
 
 config:
   authPasswordUrl: http://containerssh-auth-service.containerssh.svc.cluster.local
-  authPubkeyUrl: http://containerssh-auth-service.containerssh.svc.cluster.local/pubkey
+  authPubkeyUrl: http://containerssh-auth-service.containerssh.svc.cluster.local
   configServerUrl: http://containerssh-config-service
   namespace: containerssh
   podTtlSeconds: null
