helm 으로 guestImage 추가 + guest image 만드는 Dockerfile 추가
Former-commit-id: ce64c99108aaa1a17646e50db21d820ae2e0d5e1

--- a/containerssh/templates/configmap.yaml
+++ b/containerssh/templates/configmap.yaml
@@ -47,7 +47,8 @@ data:
             fsGroup: 1000
           containers:
           - name: shell
-            image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+            image: {{ .Values.guestImage.repository }}:{{ .Values.guestImage.tag }}
+            #image: containerssh-guest:ubuntu22.04
             command:
               - /bin/bash
             stdin: true
