--- a/containerssh/values.yaml
+++ b/containerssh/values.yaml
@@ -4,6 +4,11 @@ image:
   repository: containerssh/containerssh
   tag: v0.5
 
+guestImage:
+  repository: containerssh-guest
+  tag: ubuntu22.04 
+
+
 config:
   authPasswordUrl: http://containerssh-auth-service.containerssh.svc.cluster.local
   authPubkeyUrl: http://containerssh-auth-service.containerssh.svc.cluster.local
