containerssh와 config-server 통신 테스트 완료
Former-commit-id: e6a886e326d6f3746e05ed73e2fafa18dac0a692

--- a/containerssh/templates/deployment.yaml
+++ b/containerssh/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: containerssh
+  name: {{ .Release.Name }}
   namespace: {{ .Values.config.namespace }}
 spec:
   replicas: 1
