--- a/containerssh/templates/configmap.yaml
+++ b/containerssh/templates/configmap.yaml
@@ -27,6 +27,11 @@ data:
           url: "{{ .Values.config.authPubkeyUrl }}"
       timeout: {{ .Values.config.authTimeout }}
 
+
+    configserver:
+      url: "{{ .Values.config.configServerUrl }}"
+      timeout: 10s
+
     backend: kubernetes
     kubernetes:
       connection:
