--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+*.key
+*.pem
+*.crt
+*.env
+secrets.yaml
+
+rendered*.yaml
+rendered*.json
+*.rendered.yaml
+*.rendered.json
+*.template.yaml
+*.template.json
+values*.override.yaml
+
+*.log
+*.swp
+*.tmp
+
 files/
+
