static provisioning pvc로 재적용

--- a/pvc-chart/values.yaml
+++ b/pvc-chart/values.yaml
@@ -1,3 +1,7 @@
-username: jy
-storageSize: 20Gi
+
 storageClass: nfs-nas-v3-expandable
+
+basePath: /volume1/share
+username: jy
+nfsServer: 100.100.100.120
+storageSize: 20Gi
