--- a/containerssh/templates/secret-hostkey.yaml
+++ b/containerssh/templates/secret-hostkey.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.hostKey.secretName }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.config.namespace }}
 type: Opaque
 data:
   host.key: {{ .Files.Get .Values.hostKey.privateKeyPath | b64enc }}
