--- a/containerssh/templates/namespace.yaml
+++ b/containerssh/templates/namespace.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: containerssh
+  namespace: {{ .Values.config.namespace }}
   labels:
     name: containerssh
