--- a/containerssh/templates/rbac.yaml
+++ b/containerssh/templates/rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: containerssh
+  namespace: {{ .Values.config.namespace }}
   name: containerssh-role
   labels:
     app: containerssh
@@ -20,13 +20,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: containerssh-rolebinding
-  namespace: containerssh
+  namespace: {{ .Values.config.namespace }}
   labels:
     app: containerssh
 subjects:
 - kind: ServiceAccount
   name: containerssh
-  namespace: containerssh
+  namespace: {{ .Values.config.namespace }}
 roleRef:
   kind: Role
   name: containerssh-role
