--- a/containerssh/templates/serviceaccount.yaml
+++ b/containerssh/templates/serviceaccount.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: containerssh
-  namespace: containerssh
+  namespace: {{ .Values.config.namespace }}
   labels:
     app: containerssh
