namespace설정 cssh로 변경

--- a/auth-server/k8s/mysql-configmap.yaml
+++ b/auth-server/k8s/mysql-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-config
-  namespace: containerssh
+  namespace: cssh
 data:
   mysql.cnf: |
     [mysql]
