--- a/auth-server/k8s/mysql-secret.yaml
+++ b/auth-server/k8s/mysql-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: containerssh
+  namespace: cssh
 type: Opaque
 data:
   # Root 패스워드: 53HXfXkCfhpQxFz3BvCeTIZLh (base64 인코딩)
