--- a/auth-server/k8s/deployment.yaml
+++ b/auth-server/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: containerssh-auth-server
-  namespace: containerssh
+  namespace: cssh
   labels:
     app: containerssh-auth-server
 spec:
