--- a/auth-server/k8s/service.yaml
+++ b/auth-server/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: containerssh-auth-service
-  namespace: containerssh
+  namespace: cssh
   labels:
     app: containerssh-auth-server
 spec:
