--- a/config-server/k8s/service.yaml
+++ b/config-server/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: containerssh-config-service
-  namespace: containerssh
+  namespace: {{ .Values.config.namespace }}
 spec:
   type: NodePort
   selector:
