--- a/config-server/containerssh-config-server-chart/values.yaml
+++ b/config-server/containerssh-config-server-chart/values.yaml
@@ -24,3 +24,13 @@ env:
 config:
   namespace: cssh
 
+
+namespace: cssh
+
+cleanup:
+  image: python:3.11
+
+redis:
+  host: redis-service
+  port: 6379
+
