세션 개수 상관없이 Pod는 username당 1개만 유지

--- a/containerssh/templates/configmap.yaml
+++ b/containerssh/templates/configmap.yaml
@@ -47,6 +47,7 @@ data:
 
       pod:
         metadata:
+          name: containerssh-{{ .Values.username }}
           namespace: {{ .Values.config.namespace }}
           labels:
             app: containerssh-guest
