--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10-slim
 
 WORKDIR /app
-COPY main.py requirements.txt ./
+COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
