--- a/containerssh/templates/rbac.yaml
+++ b/containerssh/templates/rbac.yaml
@@ -15,6 +15,11 @@ rules:
 - apiGroups: [""]
   resources: ["pods/exec"]
   verbs: ["create"]
+
+# PVC 권한 추가
+- apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["get", "list", "create", "delete", "patch", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
