--- a/containerssh/templates/namespace.yaml
+++ b/containerssh/templates/namespace.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: containerssh
-  namespace: {{ .Values.config.namespace }}
+  name: {{ .Values.config.namespace }}
   labels:
-    name: containerssh
+    name: {{ .Values.config.namespace }}
