--- a/config-server/Chart/values.yaml
+++ b/config-server/Chart/values.yaml
@@ -20,6 +20,10 @@ resources:
 env:
   nfsAddress: "100.100.100.120"
 
+nfs:
+  server: "100.100.100.120"
+  path: "/volume1/share/kube_share"
+
 
 config:
   namespace: cssh
