--- a/containerssh/values.yaml
+++ b/containerssh/values.yaml
@@ -10,7 +10,8 @@ guestImage:
 
 
 config:
-  authPasswordUrl: http://containerssh-auth-service.cssh.svc.cluster.local
+  #authPasswordUrl: http://containerssh-auth-service.cssh.svc.cluster.local
+  authPasswordUrl: http://210.94.179.19:9796/api/auth/users
   authPubkeyUrl: http://containerssh-auth-service.cssh.svc.cluster.local
   configServerUrl: http://containerssh-config-service.cssh.svc.cluster.local/config
   namespace: cssh
@@ -30,7 +31,7 @@ resources:
     memory: 512Mi
 
 log:
-  level: info
+  level: debug
   format: text
 
 hostKey:
