Fix config server duplicate function and update deployment
- Remove duplicate add_user_groups function definition that caused Flask startup errors
- Add group management functionality with addgroup endpoint
- Update Helm values to use config-server:v1 image
- Fix deployment configuration for proper rollout

--- a/config-server/Chart/values.yaml
+++ b/config-server/Chart/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: containerssh-config-server
-  tag: latest
+  repository: config-server
+  tag: v1
   pullPolicy: Always
 
 service:
