spring WAS 연결 및 /config 반환오류 수정

--- a/containerssh/templates/configmap.yaml
+++ b/containerssh/templates/configmap.yaml
@@ -34,9 +34,9 @@ data:
         socketForwardingMode: enable
         socketListenMode: enable
 
-        #configserver:
-        #url: {{ include "containerssh.configServerUrl" . }}
-        #timeout: {{ .Values.config.configServerTimeout }}
+    configserver:
+        url: {{ include "containerssh.configServerUrl" . }}
+        timeout: {{ .Values.config.configServerTimeout }}
 
     backend: kubernetes
     kubernetes:
