Fix PVC directory creation with actual PV names
- Changed NFS mount from /volume1/share/kube_share to /volume1/share for broader access
- Updated container mount point from /home/tako8/share/kube_share to /home/tako8/share
- Enhanced PVC creation logic to wait for PV binding and use actual PV names for directories
- Added comprehensive logging for directory creation debugging
- Fixed directory naming to use UUID-based PV names instead of username-based names
- Updated image tag to v4 with improved functionality

--- a/config-server/Chart/templates/deployment.yaml
+++ b/config-server/Chart/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
               memory: {{ .Values.resources.limits.memory }}
           volumeMounts:
             - name: nfs-kube-share
-              mountPath: /home/tako8/share/kube_share
+              mountPath: /home/tako8/share
       volumes:
         - name: nfs-kube-share
           nfs:
