--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -5,5 +5,5 @@ COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["gunicorn", "--workers=2", "--bind=0.0.0.0:8000", "app:app"]
+CMD ["gunicorn", "--workers=2", "--bind=0.0.0.0:8000", "main:app"]
 
